# sso

./: .dockerignore  .env.local.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  build-static.sh  docker-compose.yaml  elm.json
migrations/2024-05-05-053940_add_user_table/: down.sql  up.sql
migrations/2024-05-05-092437_add_clients_table/: up.sql
src/: config.rs  db.rs  helpers.rs  kvs.rs  main.rs  routes.rs  services.rs
src/db/: schema.rs
src/pages/: Activate.elm  Layout.elm  Loader.elm  Login.elm  Register.elm
src/services/: clients.rs  email.rs  oauth2.rs  rate_limit.rs  tokens.rs  users.rs
src/services/tokens/: jwt.rs
src/services/users/: password.rs
